--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>frontdesk</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Roboto:wght@300&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
